@@ -4436,6 +4436,14 @@ performed outdoors.  This skill sends a smoke signal viewable \
 throughout the entire area by those outside.  Those with the smoke \
 signal skill will be able to read the message in the signal.
 
+THIEF_SMUGGLE=SMUGGLE
+SMUGGLE=<ABILITY>\
+Usage    : SMUGGLE [ITEM NAME] \n\r\
+Example  : smuggle poppy milk\n\r\
+The thief makes an item un-locatable to the law, allowing it to be \
+smuggled in and out of various places where it is illegal to possess. \
+Dropping or equipping the item will require a re-smuggling.
+
 BUILDHOLD=THIEF_SMUGGLERSHOLD
 THIEF_SMUGGLERS_HOLD=THIEF_SMUGGLERSHOLD
 THIEF_BUILD_SMUGGLERS_HOLD=THIEF_SMUGGLERSHOLD
