@@ -103,7 +103,7 @@ TREASURY=
 # which is charged to the owner every mud month.  
 # The money collected in this way is paid to the treasury.  This
 # number may be an integer or double.
-PROPERTYTAX=0
+PROPERTYTAX=0.0025
 
 #The percentage of every purchase price added to the price as tax
 # The money collected in this way is paid to the treasury.  This
@@ -112,8 +112,8 @@ SALESTAX=0
 
 #The percentage of a mobs carrying-around money which is charged
 #whenever a mob from the area with the TaxCollector behavior is
-#encountered.  Default is 10 (10%).
-CITTAX=10
+#encountered.  Default is 5 (5%).
+CITTAX=5
 
 #Here are the actual laws of the land.
 # The base laws have the following form:
@@ -155,7 +155,7 @@ CITTAX=10
 RESISTINGARREST=;;resisting arrest;jail1;Resisting arrest by a lawful officer is a serious crime.
 TRESPASSING=!home !indoors;!recently;trespassing;jail3;Your kind are not allowed here.
 NUDITY=!home !indoors;witness !recently;indecent exposure;warning punishcap=parole1;Nudity below the waist violates our high moral code.  Use the 'outfit' command if you need clothes!
-ARMED=!home !indoors;!recently !combat witness ignore90;violating the armed citizen law;warning punishcap=parole1;Walking around armed makes you look like a trouble-maker.  Sheath your weapon, or 'remove' the weapon until you need it.
+ARMED=!home !giant;!recently !combat witness ignore90;violating the armed citizen law;warning punishcap=parole1;Walking around armed makes you look like a trouble-maker.  Sheath your weapon, or 'remove' the weapon until you need it.
 ASSAULT=;;assaulting <T-NAME>;jail1;Assault is a hideous offense.
 MURDER=;;murdering <T-NAME>;jail3;Murder is a barbarous offense.
 PROPERTYROB=;!witness;robbing the property of <T-NAME>;jail3;Robbery violates our high moral code.
