@@ -641,6 +641,9 @@ HELP_=<EXPERTISE>The ability to magically generate higher level skeletons, and m
 GHOULLORE@x1=Ghoul Lore @x2,10,X1,-SKILL +Prayer_AnimateGhoul +Prayer_AnimateGhast,-MAXCLASSLEVEL +>={7+(7*@x1)},+INT {12+@x1},0,1,0,0,0
 HELP_=<EXPERTISE>The ability to magically generate higher level ghouls and ghasts.
 
+TORTURE@x1=Torturing @x2,10,LEVEL,-SKILL +Torturesmithing,-MAXCLASSLEVEL +>={10+(7*@x1)},+DEX {12+@x1} ,0,1,0,0,0
+HELP_=<EXPERTISE>The ability to gain more experience from torturing others.
+
 SPIRITLORE@x1=Spirit Lore @x2,10,X1,-SKILL +Prayer_AnimateSpectre +Prayer_AnimateGhost,-MAXCLASSLEVEL +>={25+(6*@x1)},+DEX {12+@x1},0,1,0,0,0
 HELP_=<EXPERTISE>The ability to magically generate higher level spectres and ghosts.
 
